--- a/app/views/my_news_items/_form.html.haml
+++ b/app/views/my_news_items/_form.html.haml
@@ -28,5 +28,11 @@
         .col-sm-10
             = select :news_item, :representative_id, representatives_list, { include_blank: true },
             class: 'form-control'
+    .form-group.row
+        .col-sm-2
+            = label_tag :issue, 'Issue', class: 'col-form-label'
+        .col-sm-10
+            = select_tag 'issue', options_for_select(issues_list),
+            class: 'form-control'
     .actions
         = f.submit 'Save', class: 'btn btn-primary'
