--- a/app/views/news_items/index.html.haml
+++ b/app/views/news_items/index.html.haml
@@ -18,6 +18,7 @@
                         %tr
                             %th #
                             %th Name
+                            %th Issues
                             %th Description
                             %th Posted
                             %th{ colspan: 3 } Links
@@ -30,6 +31,7 @@
                                         = item.title
                                         &nbsp;
                                         %i.fas.fa-external-link-alt
+                                %td= item.issue
                                 %td= item.description
                                 %td
                                     %time.timeago{ datetime: item.created_at.iso8601 }
