--- a/app/views/representatives/search.html.haml
+++ b/app/views/representatives/search.html.haml
@@ -18,4 +18,4 @@
                                     = link_to representative_news_items_path(rep.id), class: 'btn btn-primary' do
                                         %i.fas.fa-newspaper
                                         News Articles
-                                    = link_to 'Profile', representatives_path(rep), class: 'btn btn-info'
+                                    = link_to 'Profile', representative_path(rep), class: 'btn btn-info'
