--- a/app/views/my_news_items/edit.html.haml
+++ b/app/views/my_news_items/edit.html.haml
@@ -12,9 +12,9 @@
     .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4
         .clearfix.mt-3
             .float-right
-                = link_to representative_news_item_path(@news_item), class: 'mx-1 btn btn-info' do
+                = link_to representative_news_item_path(@representative, @news_item), class: 'mx-1 btn btn-info' do
                     Show article
                     %i.fas.fa-eye
-                = link_to representative_news_items_path(@representative), class: 'mx-1 btn btn-info' do
+                = link_to representative_news_items_path(@representative, @news_item), class: 'mx-1 btn btn-info' do
                     View all news articles
                     %i.fas.fa-arrow-right
